fixed card drop overflow, added comments, better timing

--- a/frontend/components/vote.less
+++ b/frontend/components/vote.less
@@ -8,8 +8,8 @@
 		
 
 		@enter-time: 0.75s;
-		@leave-time: 2s;
-		@delay-time: @leave-time;
+		@leave-time: 1.2s;
+		@delay-time: 0.5s;
 		@short-leave-time: 0.5s;
 		.pairContainer {
 			cursor: pointer;
@@ -18,10 +18,13 @@
 			left: 0;
 			width: 50%;
 			// opacity: 1;
-
+			
+			// Position right pair
 			&.right {
 				left: 50%;
 			}
+
+			// Entrance animations for both pairs
 			&.ng-enter {
 				transition: opacity @enter-time ease-out;
 				opacity: 0;
@@ -30,13 +33,20 @@
 			&.ng-enter.ng-enter-active {
 				opacity: 1;
 			}
-			 
+			
+			// Delay the entrance for all except the first set
+			// Delay allows time for the previous pairs to exit
 			&.ng-enter.ng-enter-active:not(.firstSet) {
 				transition-delay: @delay-time;
 			}
 
+			// Exit animations
+			// (at least one animation must use the full leave-time)
 			&.ng-leave {
-				transition: top @leave-time, opacity @short-leave-time ease-out, transform @short-leave-time ease, left @short-leave-time ease;
+				transition: top @leave-time,
+				            opacity @short-leave-time ease-out,
+				            transform @short-leave-time ease,
+				            left @short-leave-time ease;
 			}
 
 			&.ng-leave.ng-leave-active {
@@ -50,12 +60,17 @@
 
 				&:not(.chosen) {
 					opacity: 0;
-					transform: translateY(600px);
+					top: 600px;
+
+					&.right {
+
+					}
 				}
 			}
 
+			// Allows the chosen pair to center before fading out
 			@-webkit-keyframes waitthenfade {
-				75% { opacity: 1; }
+				50% { opacity: 1; }
 				100% { opacity: 0; }
 			}
 
