--- a/frontend/less/main.less
+++ b/frontend/less/main.less
@@ -133,6 +133,7 @@ a.list-group-special:hover {
 .content {
 	background-color: @color-background;
 	padding-top: 75px;
+	overflow: hidden;
 }
 
 .content > .container {
